Fix warnings after openjdk update